--- a/Study/Analysis/index.qmd
+++ b/Study/Analysis/index.qmd
@@ -27,7 +27,7 @@ execute:
 #| output: false
 
 # ----- Update chunks ----- #
-# update-pavlovia
+# update-pavlovia-0
 
 ```
 
@@ -93,6 +93,102 @@ In this report we will run the entire analysis protocol for five exclusion crite
 |$attentional ~ check < 4$                  | ✔    |  ✔          |  ✔            |  ✖      |  ✖   |
 |$attentional ~ check < 3$                  | ✖    |  ✖          |  ✖            |  ✔      |  ✖   |
 |$Sample < 250$                             | ✔    |  ✔          |  ✔            |  ✔      |  ✖   |
+
+<br><br>
+
+
+## Demographics
+
+Demographics of the *Preregistered* sample. 
+
+```{r demographics}
+#| code-summary: "Create table"
+
+
+# Participants from 21 countries
+df <- data_Plane %>% 
+  filter(coupon=='free') %>% 
+  # EXCLUSION: Preregistered
+  filter( !(Country %in% countries2remove) ) %>% 
+  filter( attention_check_grater_than_3 )
+
+
+df_egypt <- df %>% filter(coupon=="free") %>% filter(Country=='Egypt')
+convert_farsi_to_arabic <- function(x) {
+  if(x=="٠"|x=="۰"){
+    return( "0" )
+  } else if (x=="۱" | x=="١"){
+    return( "1" )
+  } else if (x=="۲" | x=="٢"){
+    return( "2" )
+  } else if (x=="۳"|x=="٣"){
+    return( "3" )
+  } else if (x=="۴" | x=="٤"){
+    return( "4" )
+  } else if (x=="۵" | x=="٥"){
+    return( "5" )
+  } else if (x=="۶"|x=="٦"){
+    return( "6" )
+  } else if (x=="۷" | x=="٧"){
+    return( "7" )
+  } else if (x=="۸" | x=="٨"){
+    return( "8" )
+  } else if (x=="۹" | x=="٩"){
+    return( "9" )
+  } else if( any(x %in% as.character(0:9) ) ){
+    return( x )
+  } else {
+    warning( paste("Persian number", x, "not found!!!") )
+  }
+}
+
+convert <- function(x){
+  apply(
+    str_split(string = x, pattern = "", simplify = T),
+    2,
+    convert_farsi_to_arabic
+  ) %>% paste0(collapse = "")
+}
+
+df[df$Country=='Egypt', "Age"] <-  sapply(as.list(df_egypt$Age), convert)
+
+
+data_table <- rbind(
+  df %>% 
+    mutate(Age=as.numeric(Age)) %>% 
+    filter(Age>0 & Age<99) %>% 
+    summarise(
+      Country="pooled",
+      Language=names(which.max(table(NativeLanguage))),
+      n = n(),
+      `% female` = round(mean(Gender=='Female')*100,2),
+      `Age, median (IQR) (yr)` = str_c(median(Age), " (", quantile(Age,probs = .25), "-", quantile(Age,probs = .75), ")")
+    ),
+  df %>% 
+    group_by(Country) %>% 
+    mutate(Age=round(as.numeric(Age)),0) %>% 
+    filter(Age>0 & Age<99) %>% 
+    summarise(
+      Country=names(which.max(table(Country))),
+      Language=names(which.max(table(NativeLanguage))),
+      n = n(),
+      `% female` = round(mean(Gender=='Female')*100,2),
+      `Age, median (IQR) (yr)` = str_c(round(median(Age)), " (", round(quantile(Age,probs = .25)), "-", round(quantile(Age,probs = .75)), ")")
+    ) 
+)
+
+data_table %>% 
+  kbl(caption="<b>Table 1 | </b> Demographics", align=rep('l', 5),
+      format = "html", table.attr = "style='width:35%;'") %>% 
+  kable_classic(html_font = "Cambria") %>% 
+  save_kable("tables/Demographics.pdf")
+
+data_table %>% 
+  kbl(caption="<b>Table 1 | </b> Demographics", align=rep('l', 5),
+      format = "html", table.attr = "style='width:60%;'") %>% 
+  kable_classic(html_font = "Cambria")
+
+```
 
 <br><br>
 
@@ -1179,7 +1275,7 @@ In this section we perform a Bayesian meta-analysis. The purple dots indicate th
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -1439,7 +1535,7 @@ Number of participants: `r n_participants`
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -1699,7 +1795,7 @@ Number of participants: `r n_participants`
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -2052,6 +2148,14 @@ library(tidyverse)
 
 #
 rownames(table_bayesian) <- table_bayesian$Study
+
+table_bayesian %>% 
+  select(-Study) |>
+  kbl(caption="<b>Table 2 | </b> Hierarchical Bayesian Meta-Analysis",
+      format = "html", table.attr = "style='width:50%;'") %>% 
+  kable_classic(html_font = "Cambria") %>%
+  save_kable("tables/Hierarchical Bayesian Meta-Analysis.pdf")
+
 table_bayesian %>% 
   select(-Study) |>
   kbl(caption="<b>Table 2 | </b> Hierarchical Bayesian Meta-Analysis",
@@ -2069,7 +2173,7 @@ Number of participants: `r n_participants`
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -2358,7 +2462,7 @@ Number of participants: `r n_participants`
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -2653,7 +2757,7 @@ In this section we perform a Bayesian unpooled analysis. We will compute the eff
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -3565,7 +3669,7 @@ cowplot::plot_grid(plotOR, plotSMD, nrow = 1, rel_widths = c(0.7, .3))
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -4248,7 +4352,7 @@ cowplot::plot_grid(plotOR, plotSMD, nrow = 1, rel_widths = c(0.7, .3))
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -5148,10 +5252,16 @@ cowplot::plot_grid(plotOR, plotSMD, nrow = 1, rel_widths = c(0.7, .3))
 ```{r table-preregistered-unpooled}
 
 table_unpooled %>% 
-  kbl(caption="<b>Table 2 | </b> Hierarchical Bayesian Meta-Analysis",
+  kbl(caption="<b>Table 3 | </b> Unpooled Analysis",
+      format = "html", table.attr = "style='width:50%;'") %>% 
+  kable_classic(html_font = "Cambria") %>% 
+  save_kable("tables/Unpooled Analysis.pdf")
+  
+table_unpooled %>% 
+  kbl(caption="<b>Table 3 | </b> Unpooled Analysis",
       format = "html", table.attr = "style='width:50%;'") %>% 
   kable_classic(html_font = "Cambria")
-  
+
 ```
 
 :::
@@ -5160,7 +5270,7 @@ table_unpooled %>%
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -5837,7 +5947,7 @@ cowplot::plot_grid(plotOR, plotSMD, nrow = 1, rel_widths = c(0.7, .3))
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -6512,7 +6622,7 @@ In this section we perform a Bayesian unpooled analysis to explore the role of f
 
 ::: {.panel-tabset}
 
-#### <img src="Report_files/figure-html/home.png" width="20">
+#### <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/120px-Home-icon.svg.png" width="20">
 
 Click on the tabs to see the model's summary for each study
 
@@ -7212,7 +7322,7 @@ cowplot::plot_grid(plotOR, plotSMD, nrow = 1, rel_widths = c(0.7, .3))
 #| echo: false
 #| output: false
 
-# update-pavlovia
+# update-pavlovia-0
 
 pathdir="/Volumes/PROJECTS/Ongoing/MMAR/Pavlovia/mmar-analysis"
 
